# curled-keyboard

./: .gitignore  README.md  assembly.3mf  assembly.py  boundary.py  chain_wall.py  gateron-banana-switch-mount.FCStd  horizontal_walls.py  mommy.py  pyproject.toml  scad_helpers.py  socket.py  switch-mount.stl  test_boundary.py  vertical_walls.py
