[project]
name = "solidpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pudb>=2024.1.3",
    "scipy>=1.15.1",
    "solidpython2>=2.1.1",
]


[tool.ruff]
ignore = ["F405"]
